public class Sviluppatore {
    private String Name;

    public Sviluppatore(String name) {
        Name = name;
    }

    @Override
    public String toString() {
        return Name;
    }
}
